--- a/ui.html
+++ b/ui.html
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dream11/250c15ff-14e5-473d-bbf3-7df68a4fde79'>Dream11 - AVP, Product Design - UI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dream11/250c15ff-14e5-473d-bbf3-7df68a4fde79'>Dream11 - AVP, Product Design - UI</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -166,7 +166,7 @@
 <p><span class="badge badge-light">Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6982718/graduate-trainee-recruitment-consultant-virgin-fasttrack-100-company/?TrackID=12'>Graduate Trainee Recruitment Consultant - Virgin Fasttrack 100 Company job with TRIBECA RECRUITMENT | Guardian Jobs</a></h5> 
+<h5><a href='https://jobs.theguardian.com/job/6982718/graduate-trainee-recruitment-consultant-virgin-fasttrack-100-company/?TrackID=12'>Graduate Trainee Recruitment Consultant - Virgin Fasttrack 100 Company job with TRIBECA RECRUITMENT | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -262,11 +262,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ogQvafwv&__jvst=Employee&__jvsd=sg2kciwB&__jvsc=Twitter&bid=nZwPoMwZ'>SugarCRM Careers - Senior UI Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ogQvafwv&__jvst=Employee&__jvsd=sg2kciwB&__jvsc=Twitter&bid=nZwPoMwZ'>SugarCRM Careers - Senior UI Software Engineer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -310,7 +310,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5632/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5632/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -338,7 +338,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5640/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5640/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -346,7 +346,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-digestive-health-center-procedure-suite-5640'>Staff Nurse -Digestive Health Center Procedure Suite - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-digestive-health-center-procedure-suite-5640'>Staff Nurse -Digestive Health Center Procedure Suite - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -380,7 +380,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://opsramp.recruitee.com/o/ui-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opsramp.recruitee.com/o/ui-developer'>
       UI Developer - OpsRamp, Inc.
     </a></h5> 
 <p><span class="badge badge-light">Hyderabad, India</span></p>
@@ -394,7 +394,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199116?bpin=1046&com=2&rin=1467367'>Job Profile - Senior UI Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199116?bpin=1046&com=2&rin=1467367'>Job Profile - Senior UI Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -426,7 +426,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698449101-ui-programmer-h-f-'>Ubisoft UI programmer (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698449101-ui-programmer-h-f-'>Ubisoft UI programmer (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
